--- a/sources/springboot/pom.xml
+++ b/sources/springboot/pom.xml
@@ -15,6 +15,8 @@
 	<name>frontend-service</name>
 	<description>Frontend service for observability demo</description>
 	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
