--- a/sources/springboot/src/main/resources/application.properties
+++ b/sources/springboot/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=tomcat-frontend
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
+
 management.endpoints.web.exposure.include=health,metrics,prometheus
