--- a/infrastructure/01-platform/01-storage-claims.yaml
+++ b/infrastructure/01-platform/01-storage-claims.yaml
@@ -2,7 +2,7 @@ apiVersion: objectbucket.io/v1alpha1
 kind: ObjectBucketClaim
 metadata:
   name: tempostack-demo-bucket
-  namespace: openshift-distributed-tracing
+  namespace: openshift-tracing
 spec:
   generateBucketName: tempostack-demo-bucket
   storageClassName: openshift-storage.noobaa.io
