--- a/infrastructure/01-platform/templates/tempo-secret.yaml
+++ b/infrastructure/01-platform/templates/tempo-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: observability-demo-tempo-secret
-  namespace: observability-demo-backend
+  namespace: openshift-tracing
 type: Opaque
 stringData:
   bucket: ""
