--- a/infrastructure/00-operators/tempo/02-subscription.yaml
+++ b/infrastructure/00-operators/tempo/02-subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: tempo-operator
-  namespace: openshift-distributed-tracing
+  namespace: openshift-tracing
 spec:
   channel: stable
   installPlanApproval: Automatic
