--- a/infrastructure/01-platform/templates/loki-secret.yaml
+++ b/infrastructure/01-platform/templates/loki-secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-logging
 type: Opaque
 stringData:
-  bucket: ""
-  bucketnames: https://s3.openshift-storage.svc
+  bucketnames: ""
+  endpoint: https://s3.openshift-storage.svc
   access_key_id: ""
   access_key_secret: ""
