chore: relay on platform tenant for traces

--- a/demo/backend_infrastructure/5-rbac.yaml
+++ b/demo/backend_infrastructure/5-rbac.yaml
@@ -8,7 +8,8 @@ metadata:
 rules:
   - apiGroups:
       - 'tempo.grafana.com'
-    resources: 
+    resources:
+      - platform
       - demo
       - dev
       - prod
@@ -82,6 +83,7 @@ rules:
   - apiGroups:
       - 'tempo.grafana.com'
     resources:
+      - platform
       - demo
       - dev
       - prod
