feat(tempo-mcp): enable tempo mcp server.
To use tempo mcp server with tempo stack ambassador pattern is needed to bypass tempo gw entrypoint

--- a/infrastructure/01-platform/03-tracing-stack.yaml
+++ b/infrastructure/01-platform/03-tracing-stack.yaml
@@ -30,3 +30,8 @@ spec:
       enabled: true
       rbac:
         enabled: true 
+  extraConfig:
+      tempo:
+        query_frontend:
+          mcp_server:
+            enabled: true
